// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component snapshot blocked matches the previous snapshot 1`] = `
<_Footer
  blocked={true}
  fireStartWorkout={[Function]}
  loadDefaults={[Function]}
>
  <footer
    data-css-116hn21=""
  >
    <glamorous(button)
      disabled={true}
      onClick={[Function]}
    >
      <button
        className="css-mfy564"
        disabled={true}
        onClick={[Function]}
      >
        Starting ...
      </button>
    </glamorous(button)>
  </footer>
</_Footer>
`;

exports[`Footer component snapshot not blocked matches the previous snapshot 1`] = `
<_Footer
  blocked={false}
  fireStartWorkout={[Function]}
  loadDefaults={[Function]}
>
  <footer
    data-css-116hn21=""
  >
    <glamorous(button)
      disabled={false}
      onClick={[Function]}
    >
      <button
        className="css-mfy564"
        disabled={false}
        onClick={[Function]}
      >
        Start Workout
      </button>
    </glamorous(button)>
  </footer>
</_Footer>
`;
